--- a/package.json
+++ b/package.json
@@ -147,6 +147,7 @@
     "minimatch": "^3.1.2",
     "ms": "^2.1.2",
     "natural-compare": "^1.4.0",
+    "node-fetch": "^3.3.2",
     "node-int64": "^0.4.0",
     "node-releases": "^2.0.13",
     "normalize-path": "^3.0.0",
