--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "devDependencies": {
     "eslint": "^8.52.0",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "node-fetch": "^3.3.2"
   },
   "scripts": {
     "start": "node index.js",
@@ -147,7 +148,6 @@
     "minimatch": "^3.1.2",
     "ms": "^2.1.2",
     "natural-compare": "^1.4.0",
-    "node-fetch": "^3.3.2",
     "node-int64": "^0.4.0",
     "node-releases": "^2.0.13",
     "normalize-path": "^3.0.0",
