--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   },
   "devDependencies": {
     "eslint": "^8.52.0",
-    "jest": "^29.7.0",
-    "node-fetch": "^3.3.2"
+    "jest": "^29.7.0"
   },
   "scripts": {
     "start": "node index.js",
@@ -30,6 +29,7 @@
     "ansi-styles": "^4.3.0",
     "anymatch": "^3.1.3",
     "argparse": "^1.0.10",
+    "axios": "^1.5.1",
     "babel-jest": "^29.7.0",
     "babel-plugin-istanbul": "^6.1.1",
     "babel-plugin-jest-hoist": "^29.6.3",
@@ -142,6 +142,7 @@
     "lru-cache": "^5.1.1",
     "make-dir": "^4.0.0",
     "makeerror": "^1.0.12",
+    "markdown-link-extractor": "^3.1.0",
     "merge-stream": "^2.0.0",
     "micromatch": "^4.0.5",
     "mimic-fn": "^2.1.0",
