--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "collect-v8-coverage": "^1.0.2",
     "color-convert": "^2.0.1",
     "color-name": "^1.1.4",
+    "colors": "^1.4.0",
     "concat-map": "^0.0.1",
     "convert-source-map": "^2.0.0",
     "create-jest": "^29.7.0",
